--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   url_launcher: ^5.0.1
   provider: ^3.1.0
   shared_preferences: ^0.4.3
+  toast: ^0.1.5
 
 
 
@@ -50,11 +51,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+#   assets:
+#    - images/a_dot_burr.jpeg
+#    - images/a_dot_ham.jpeg
   assets:
-    - lib/assets/image
+     - lib/assets/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
