--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   city_pickers: ^0.1.27
   flutter_cupertino_date_picker: ^1.0.12
   image_picker: ^0.6.1+8
+  photo_view: ^0.6.0
 
 
 
