--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_cupertino_date_picker: ^1.0.12
   image_picker: ^0.6.1+8
   photo_view: ^0.6.0
+  flutter_stetho: ^0.5.0
 
 
 
